@@ -31,3 +31,8 @@ Version 0.7
 Version 0.8
 ~~~~~~~~~~~
 * Post NRAO-DiFX 1.1 branch
+* don't use tstMark5A anymore
+* lots of careless bug fixes
+* reenable auto getvsn
+* Support for copy in mk5daemon, and support for HUP signal in mk5cp and mk5dir
+
